--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -146,11 +146,17 @@
     "# replace 'political' and 'clickbait' with 'reliable'\n",
     "data['type'] = data['type'].replace(['political', 'clickbait'], 'reliable')\n",
     "\n",
+    "# replace 'bias' and 'satite' with 'fake'\n",
+    "data['type'] = data['type'].replace(['bias', 'satire'], 'fake')\n",
+    "\n",
     "#  remove all the other types of news except 'reliable' and 'fake'\n",
     "data = data[data['type'].isin(['reliable', 'fake'])]\n",
     "\n",
     "\n",
-    "print('Total rows after removing missing values:', data.shape[0])\n"
+    "print('Total rows after removing missing values:', data.shape[0])\n",
+    "\n",
+    "reliable_percent = data['type'].value_counts()['reliable'] / data.shape[0] * 100\n",
+    "print('Reliable percent:', reliable_percent)\n"
    ]
   },
   {
