--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -472,7 +472,7 @@
     "print(\"accuracy: \", accuracy)\n",
     "\n",
     "# predicting: liar dataset\n",
-    "liar_predic = clf.predict(tfidvec.transform(X_liar))\n",
+    "liar_predic = clf.predict(scale.transform(tfidvec.transform(X_liar)))\n",
     "accuracy = accuracy_score(y_liar, liar_predic)\n",
     "print(\"liar accuracy: \", accuracy)"
    ]
@@ -501,7 +501,7 @@
     "print(\"accuracy: \", accuracy_score(y_test, y_pred))\n",
     "\n",
     "# predicting: liar dataset\n",
-    "liar_predic = clf.predict(tfidvec.transform(X_liar))\n",
+    "liar_predic = clf.predict(scale.transform(tfidvec.transform(X_liar)))\n",
     "accuracy = accuracy_score(y_liar, liar_predic)\n",
     "print(\"liar accuracy: \", accuracy)"
    ]
@@ -532,7 +532,7 @@
     "print(\"accuracy: \", accuracy)\n",
     "\n",
     "# predicting: liar dataset\n",
-    "liar_predic = naive.predict(tfidvec.transform(X_liar))\n",
+    "liar_predic = naive.predict(scale.transform(tfidvec.transform(X_liar)))\n",
     "accuracy = accuracy_score(y_liar, liar_predic)\n",
     "print(\"liar accuracy: \", accuracy)"
    ]
@@ -564,7 +564,7 @@
     "print(\"accuracy: \", accuracy)\n",
     "\n",
     "# predicting: liar dataset\n",
-    "liar_predic = mlp.predict(tfidvec.transform(X_liar))\n",
+    "liar_predic = mlp.predict(scale.transform(tfidvec.transform(X_liar)))\n",
     "accuracy = accuracy_score(y_liar, liar_predic)\n",
     "print(\"liar accuracy: \", accuracy)"
    ]
