--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -13,9 +13,8 @@
     "# nltk.download('punkt') ----> udkommenter denne linje, hvis du ikke har nltk installeret\n",
     "import matplotlib.pyplot as plt\n",
     "from nltk.corpus import stopwords\n",
-    "# nltk.download('stopwords')\n",
+    "# nltk.download('stopwords') ----> udkommenter denne linje, hvis du ikke har nltk installeret\n",
     "from nltk.stem import PorterStemmer\n",
-    "from nltk.stem.snowball import SnowballStemmer\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -29,9 +28,9 @@
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix\n",
     "\n",
-    "# import modin.pandas as mpd\n"
+    "\n"
    ]
   },
   {
@@ -249,7 +248,6 @@
     "# removing stopwords and stemming the tokens\n",
     "\n",
     "stop_words = set(stopwords.words('english'))\n",
-    "# stemmer = SnowballStemmer(\"english\")\n",
     "stemmer = PorterStemmer() \n",
     "\n",
     "def process_tokens(tokens):\n",
@@ -261,7 +259,7 @@
     "\n",
     "    return stemmed_tokens\n",
     "\n",
-    "# data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
+    "data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
     "# data['processed_tokens'] = data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))"
    ]
   },
@@ -285,25 +283,25 @@
    ],
    "source": [
     "# reading the other cleaned data\n",
-    "cleaned_stemmed = pd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
+    "# cleaned_stemmed = pd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
     "\n",
-    "cleaned_stemmed = cleaned_stemmed.dropna(subset=['type', 'content'])\n",
+    "# cleaned_stemmed = cleaned_stemmed.dropna(subset=['type', 'content'])\n",
     "\n",
-    "# replace 'political' and 'clickbait' with 'reliable'\n",
-    "cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['political', 'clickbait'], 'reliable')\n",
+    "# # replace 'political' and 'clickbait' with 'reliable'\n",
+    "# cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['political', 'clickbait'], 'reliable')\n",
     "\n",
-    "# replace 'bias' and 'satite' with 'fake'\n",
-    "cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['bias', 'satire'], 'fake')\n",
-    "#  remove all the other types of news except 'reliable' and 'fake'\n",
-    "cleaned_stemmed = cleaned_stemmed[cleaned_stemmed['type'].isin(['reliable', 'fake'])]\n",
+    "# # replace 'bias' and 'satite' with 'fake'\n",
+    "# cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['bias', 'satire'], 'fake')\n",
+    "# #  remove all the other types of news except 'reliable' and 'fake'\n",
+    "# cleaned_stemmed = cleaned_stemmed[cleaned_stemmed['type'].isin(['reliable', 'fake'])]\n",
     "\n",
-    "print('Total rows after removing missing values:', cleaned_stemmed.shape[0]) \n",
+    "# print('Total rows after removing missing values:', cleaned_stemmed.shape[0]) \n",
     "\n",
-    "print(cleaned_stemmed['type'].value_counts())\n",
+    "# print(cleaned_stemmed['type'].value_counts())\n",
     "\n",
-    "# percent reliable\n",
-    "reliable_percent = cleaned_stemmed['type'].value_counts()['reliable'] / cleaned_stemmed.shape[0] * 100\n",
-    "print('Reliable percent:', reliable_percent)"
+    "# # percent reliable\n",
+    "# reliable_percent = cleaned_stemmed['type'].value_counts()['reliable'] / cleaned_stemmed.shape[0] * 100\n",
+    "# print('Reliable percent:', reliable_percent)"
    ]
   },
   {
@@ -312,8 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using either CountVectorizer or TfidfVectorizer to convert the text data into numerical data\n",
-    "CountVectorizer = CountVectorizer()\n",
+    "# using  TfidfVectorizer to convert the text data into numerical data\n",
     "tfidvec = TfidfVectorizer(stop_words='english',max_df=0.7)"
    ]
   },
@@ -326,11 +323,11 @@
     "# split the data into training and testing sets\n",
     "\n",
     "# X = CountVectorizer.fit_transform(cleaned_stemmed['content'])\n",
-    "X = tfidvec.fit_transform(cleaned_stemmed['content'])\n",
-    "# X = CountVectorizer.fit_transform(data['processed_tokens'])\n",
+    "# X = tfidvec.fit_transform(cleaned_stemmed['content'])\n",
+    "X = tfidvec.fit_transform(data['processed_tokens'])\n",
     "\n",
     "\n",
-    "X_train, X_test_1, y_train, y_test_1  = train_test_split(X, cleaned_stemmed['type'], test_size=0.2, random_state=42)\n",
+    "X_train, X_test_1, y_train, y_test_1  = train_test_split(X, data['type'], test_size=0.2, random_state=42)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_test_1, y_test_1, test_size=0.5, random_state=42)"
    ]
   },
@@ -357,13 +354,14 @@
     "X_liar = X_liar.apply(cleanText)\n",
     "\n",
     "# tokenize the text\n",
-    "# X_liar = X_liar.apply(nltk.word_tokenize)\n",
+    "X_liar = X_liar.apply(nltk.word_tokenize)\n",
     "\n",
     "# remove stopwords and stem the tokens\n",
     "# X_liar = X_liar.apply(process_tokens).apply(lambda x: ' '.join(x))\n",
     "\n",
     "# data['processed_tokens'] = data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))\n",
-    "X_liar = X_liar.apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))\n",
+    "# X_liar = X_liar.apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))\n",
+    "X_liar = X_liar.apply(process_tokens).apply(lambda x: ' '.join(x))\n",
     "\n",
     "\n"
    ]
