--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -629,18 +629,7 @@
    ],
    "source": [
     "# cleaning the text\n",
-    "# data['content'] = data['content'].apply(cleanText)\n",
     "clean_parts(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tokenization\n",
-    "# data['tokens'] = data['content'].apply(nltk.word_tokenize)"
    ]
   },
   {
@@ -671,66 +660,11 @@
     }
    ],
    "source": [
-    "# removing stopwords and stemming the tokens\n",
+    "# stemming the tokens\n",
     "\n",
-    "# stop_words = set(stopwords.words('english'))\n",
     "stemmer = PorterStemmer() \n",
     "\n",
-    "# def process_tokens(tokens):\n",
-    "#     # remove stopwords\n",
-    "#     filtered_tokens = [token for token in tokens if token not in stop_words]\n",
-    "\n",
-    "#     # stemming\n",
-    "#     stemmed_tokens = [stemmer.stem(token) for token in filtered_tokens]\n",
-    "\n",
-    "#     return stemmed_tokens\n",
-    "\n",
-    "# data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
-    "\n",
-    "# tokenize and stem the content\n",
-    "# data['processed_tokens'] = data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))\n",
     "data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total rows after removing missing values: 691768\n",
-      "type\n",
-      "reliable    440493\n",
-      "fake        251275\n",
-      "Name: count, dtype: int64\n",
-      "Reliable percent: 63.6764059626927\n"
-     ]
-    }
-   ],
-   "source": [
-    "# reading the other cleaned data\n",
-    "# cleaned_stemmed = pd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
-    "\n",
-    "# cleaned_stemmed = cleaned_stemmed.dropna(subset=['type', 'content'])\n",
-    "\n",
-    "# # replace 'political' and 'clickbait' with 'reliable'\n",
-    "# cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['political', 'clickbait'], 'reliable')\n",
-    "\n",
-    "# # replace 'bias' and 'satite' with 'fake'\n",
-    "# cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['bias', 'satire'], 'fake')\n",
-    "# #  remove all the other types of news except 'reliable' and 'fake'\n",
-    "# cleaned_stemmed = cleaned_stemmed[cleaned_stemmed['type'].isin(['reliable', 'fake'])]\n",
-    "\n",
-    "# print('Total rows after removing missing values:', cleaned_stemmed.shape[0]) \n",
-    "\n",
-    "# print(cleaned_stemmed['type'].value_counts())\n",
-    "\n",
-    "# # percent reliable\n",
-    "# reliable_percent = cleaned_stemmed['type'].value_counts()['reliable'] / cleaned_stemmed.shape[0] * 100\n",
-    "# print('Reliable percent:', reliable_percent)"
    ]
   },
   {
@@ -751,8 +685,7 @@
    "source": [
     "# split the data into training and testing sets\n",
     "\n",
-    "# X = CountVectorizer.fit_transform(cleaned_stemmed['content'])\n",
-    "# X = tfidvec.fit_transform(cleaned_stemmed['content'])\n",
+    "\n",
     "X = tfidvec.fit_transform(data['content'])\n",
     "\n",
     "\n",
@@ -782,15 +715,8 @@
     "# clean the text\n",
     "X_liar = X_liar.apply(cleanText)\n",
     "\n",
-    "# tokenize the text\n",
-    "# X_liar = X_liar.apply(nltk.word_tokenize)\n",
     "\n",
-    "# remove stopwords and stem the tokens\n",
-    "# X_liar = X_liar.apply(process_tokens).apply(lambda x: ' '.join(x))\n",
-    "\n",
-    "# data['processed_tokens'] = data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))\n",
     "X_liar = X_liar.apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))\n",
-    "# X_liar = X_liar.apply(process_tokens).apply(lambda x: ' '.join(x))\n",
     "\n",
     "\n"
    ]
