--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -1046,7 +1046,7 @@
    "source": [
     "# training naive bayes model\n",
     "\n",
-    "naive = MultinomialNB() # try with countvectorizer also since it is a naive bayes model and it is better with countvectorizer, appearently.\n",
+    "naive = MultinomialNB() \n",
     "naive.fit(X_train, y_train)"
    ]
   },
